# Exchange

./: .gitignore  ActionHandler.cpp  ActionHandler.h  CMakeLists.txt  README.md  Starter.cpp  Starter.h  Starter.hpp  StockExchange.cpp  StockExchange.h  StockExchange.hpp  check.cpp  coverage_report.sh  main.cpp
Actions/: Action.cpp  Action.h  Action.hpp  ActionHandler.cpp  ActionHandler.h  ActionHandler.hpp  ActionType.h  CMakeLists.txt
Backend/: CMakeLists.txt
Backend/Actions/: ActionHandler.hpp  ActionType.hpp  CMakeLists.txt
Backend/Company/: CMakeLists.txt  Company.cpp
Backend/Order/: CMakeLists.txt  Order.hpp  Type.cpp
Backend/Trader/: CMakeLists.txt  Trader.hpp
Company/: CMakeLists.txt  Company.cpp  Company.h  Company.hpp  CompanyActionHandler.cpp  CompanyActionHandler.h  CompanyActionHandler.hpp  Stock.cpp  Stock.h  Stock.hpp
Frontend/: CMakeLists.txt  CompanyActionHandler.hpp  OrderActionHandler.cpp  OrderActionHandler.hpp  Starter.cpp  Starter.hpp  TraderActionHandler.cpp  TraderActionHandler.hpp
Order/: CMakeLists.txt  Order.cpp  Order.h  Order.hpp  OrderActionHandler.cpp  OrderActionHandler.h  OrderActionHandler.hpp  OrderType.h  OrderType.hpp  Transaction.cpp  Transaction.h  Type.cpp  Type.h  Type.hpp
Trader/: CMakeLists.txt  Trader.cpp  Trader.h  Trader.hpp  TraderActionHandler.cpp  TraderActionHandler.h  TraderActionHandler.hpp
cmake/: CodeCoverage.cmake
examples/: 01-main.cpp  02-main.cpp  03-main.cpp  CMakeLists.txt
tests/: CMakeLists.txt  ExchangeTest.cpp  ExchangeTest.hpp  TraderTest.hpp  main_test.cpp
